// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDefaultEnvelope > should allow overriding all retry fields 1`] = `
{
  "attempt": 0,
  "broadcast": false,
  "correlationId": null,
  "expiry": null,
  "headers": {
    "x-iris-type": "TestMessage",
  },
  "identifierValue": null,
  "maxRetries": 5,
  "payload": Any<Buffer>,
  "priority": 0,
  "replyTo": null,
  "retryDelay": 500,
  "retryDelayMax": 60000,
  "retryJitter": true,
  "retryMultiplier": 3,
  "retryStrategy": "exponential",
  "timestamp": Any<Number>,
  "topic": "test.topic",
}
`;

exports[`createDefaultEnvelope > should apply overrides 1`] = `
{
  "attempt": 0,
  "broadcast": false,
  "correlationId": "abc-123",
  "expiry": null,
  "headers": {
    "x-iris-type": "TestMessage",
  },
  "identifierValue": null,
  "maxRetries": 0,
  "payload": Any<Buffer>,
  "priority": 5,
  "replyTo": "reply-stream",
  "retryDelay": 1000,
  "retryDelayMax": 30000,
  "retryJitter": false,
  "retryMultiplier": 2,
  "retryStrategy": "constant",
  "timestamp": Any<Number>,
  "topic": "test.topic",
}
`;

exports[`createDefaultEnvelope > should create envelope with default values 1`] = `
{
  "attempt": 0,
  "broadcast": false,
  "correlationId": null,
  "expiry": null,
  "headers": {
    "x-iris-type": "TestMessage",
  },
  "identifierValue": null,
  "maxRetries": 0,
  "payload": Any<Buffer>,
  "priority": 0,
  "replyTo": null,
  "retryDelay": 1000,
  "retryDelayMax": 30000,
  "retryJitter": false,
  "retryMultiplier": 2,
  "retryStrategy": "constant",
  "timestamp": Any<Number>,
  "topic": "test.topic",
}
`;
